<resources>
    <string name="app_name">ProjectAndroid2-MPPL2205</string>
    <string name="welcome_to_this_app">Welcome to this app!</string>
    <string name="welcome">Welcome</string>
    <string name="winter_tourist_destination">Winter tourist destination</string>
    <string name="loading">Loading…</string>
    <string name="menu">Menu</string>
    <string name="click_here">Click here to see \n the best things to do</string>
    <string name="explore_the_prague_castle">Explore the Prague Castle</string>
    <string name="try_cross_country_ski_at_skipark_praha">Try Cross-Country Ski at SkiPark Praha</string>
    <string name="take_the_vltava_river_cruise">Take the Vltava River Cruise</string>
    <string name="ride_the_christmas_trams">Ride the Christmas Trams</string>
    <string name="castleview">castleView</string>
    <string name="backbutton">backButton</string>
    <string name="tramsview">tramsview</string>
    <string name="riverview">riverview</string>
    <string name="skiparkview">skiparkview</string>
    <string name="click_rate">Click here \n to rate this app</string>
</resources>